# Aoc-2020

./: .clang-format  .gitignore  CMakeLists.txt  README.md  solution.cpp
aoclib/: aoclib.cpp  aoclib.hpp
day-01/: solution.cpp
day-02/: solution.cpp
day-03/: solution.cpp
day-04/: solution.cpp
day-05/: solution.cpp
day-06/: solution.cpp
day-07/: solution.cpp
day-08/: solution.cpp  solution.hpp
day-09/: solution.cpp
day-10/: solution.cpp
day-11/: solution.cpp
day-12/: solution.cpp
day-13/: solution.cpp  solution.py
day-14/: solution.cpp
day-15/: solution.cpp
day-16/: solution.cpp
day-17/: solution.cpp
day-18/: solution.cpp
day-19/: solution.cpp
day-20/: solution.cpp
day-21/: solution.cpp
day-22/: solution.cpp
day-23/: solution.cpp
day-24/: solution.cpp
day-25/: solution.cpp
